<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.scorekeeper.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/teamA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Team 1"
                    android:textSize="24sp"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/scoreA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="0"
                    android:textColor="@color/colorWhite"
                    android:textSize="64sp"
                    android:layout_marginBottom="16dp"/>

                <Button
                    android:id="@+id/pointA"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/point" />

                <Button
                    android:id="@+id/sweepA"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/sweep" />

                <Button
                    android:id="@+id/euchreA"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/euchre" />

                <Button
                    android:id="@+id/easA"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/eas" />

                <Button
                    android:id="@+id/soloA"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/solo" />

                <Button
                    android:id="@+id/renegeA"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/renege" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/teamB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Team 2"
                    android:textSize="24sp"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/scoreB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/colorWhite"
                    android:text="0"
                    android:textSize="64sp"
                    android:layout_marginBottom="16dp"/>

                <Button
                    android:id="@+id/pointB"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/point" />

                <Button
                    android:id="@+id/sweepB"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/sweep" />

                <Button
                    android:id="@+id/euchreB"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/euchre" />

                <Button
                    android:id="@+id/easB"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/eas" />

                <Button
                    android:id="@+id/soloB"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/solo" />

                <Button
                    android:id="@+id/renegeB"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/renege" />

            </LinearLayout>


        </LinearLayout>

            <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/reset"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
